<resources>
    <string name="app_name">微保姆</string>

    <!-- Strings related to login-->
    <string name="prompt_phone_number">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登  录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_login_state_invalid">登录状态失效，请重新登录</string>
    <string name="error_invalid_phone_number">手机号无效</string>
    <string name="error_password_required">请输入密码</string>
    <string name="error_phone_number_required">请输入手机号</string>
    <string name="action_logining">正在登录……</string>
    <string name="response_data_corrupt">接收数据已损坏，请重试</string>
    <string name="error_login_failed">登录失败，请稍后再试</string>
    <string name="network_error">网络错误或连接超时，请检查网络</string>
    <string name="unknown_error">未知错误</string>
    <string name="server_internal_error">服务器内部错误</string>
    <string name="action_forget_password">忘记密码</string>
    <string name="action_new_user">新用户</string>
    <string name="alert_session_expired">登录状态过期，请重新登录</string>
    <string name="error">错误</string>

    <!--Strings related to register-->
    <string name="prompt_reconfirm_password">确认密码</string>
    <string name="prompt_sex">性别</string>
    <string name="prompt_name">昵称</string>
    <string name="prompt_account_type">账号类型</string>
    <string name="prompt_identifying_code">手机验证码</string>
    <string name="prompt_male">男</string>
    <string name="prompt_female">女</string>
    <string name="prompt_elder">老人</string>
    <string name="prompt_guardian">监护人</string>
    <string name="action_register">完成注册</string>
    <string name="action_identifying_code">获取验证码</string>
    <string name="error_nickname_empty">请输入昵称</string>
    <string name="error_captcha_empty">请输入验证码</string>
    <string name="error_password_invalid_len">密码长度为6-20位</string>
    <string name="error_password_inconstancy">两次输入密码不一致</string>
    <string name="action_registering">正在注册...</string>

    <!--Strings related to reset password-->
    <string name="action_reset_password">重置密码</string>
    <string name="prompt_new_password">新密码</string>
    <string name="prompt_repeat_new_password">重复新密码</string>
    <string name="action_done">完 成</string>
    <string name="action_resetting">正在重置密码...</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_waiting">请稍等...</string>
    <string name="other">其它</string>
    <string name="account">账号</string>
    <string name="action_monitor">监测</string>
    <string name="action_monitor_warning">监测警报</string>
    <string name="action_friend_juan">朋友圈</string>
    <string name="action_medication_reminder">吃药提醒</string>
    <string name="action_scan_qr_code">扫描二维码</string>
    <string name="action_settings">应用设置</string>
    <string name="action_logout">注销账号</string>
    <string name="alert_query_logout">确定要注销吗？</string>
    <string name="action_exit">退出应用</string>

    <string name="action_family_monitor">家庭环境</string>
    <string name="action_guard_thief_monitor">防盗</string>
    <string name="action_health_monitor">身体健康</string>
    <string name="action_going_out_monitor">出行</string>
    <string name="action_call_for_help">一键呼救</string>

    <string name="no_data">暂时没有数据</string>
    <string name="update_time">更新时间：</string>
    <string name="warning_time">警报时间：</string>
    <string name="family_monitor_safe_level">安全等级</string>
    <string name="danger">危险</string>
    <string name="hidden_in_danger">存在隐患</string>
    <string name="safe">安全</string>
    <string name="unknown">未知</string>
    <string name="prompt_temperature">温度</string>
    <string name="prompt_humidity">湿度</string>
    <string name="prompt_smoke">烟雾浓度</string>

    <string name="health_monitor_health_condition">健康状况</string>
    <string name="health_good">良好</string>
    <string name="health_so">一般</string>
    <string name="health_bad">较差</string>
    <string name="pulse">脉搏</string>
    <string name="fever">体温</string>
    <string name="blood_pressure">血压</string>

    <string name="today">今天</string>
    <string name="yesterday">昨天</string>

    <string name="action_contacts_older">联系老人</string>

    <string name="your_location">您的当前位置</string>
    <string name="older_location">老人当前位置</string>
    <string name="unknown_location">未知位置</string>
    <string name="home_loaction_not_setting">家的位置未设置</string>
    <string name="action_location_search">位置搜索</string>
    <string name="action_home_location_desc">家庭地址描述</string>

    <string name="monitor_detail">监控详情</string>
    <string name="alert_loading">加载中……</string>
    <string name="no_monitor_warning">没有警报消息</string>
    <string name="no_more">已经没有更多了</string>

    <string name="exit_query">确定要退出吗？退出后将无法接收到监控警报消息。</string>
    <string name="action_ok">确定</string>
    <string name="action_cancel">取消</string>

    <string name="friend_message">消息</string>
    <string name="friend_contacts">联系人</string>
    <string name="friend_moment">动态</string>

    <string name="no_contacts">暂无联系人</string>
    <string name="no_message">暂时没有消息</string>
    <string name="empty_friend_list">好友列表为空</string>
    <string name="guardians">监护人</string>
    <string name="friends">好友</string>
    <string name="add_guardian">添加监护人</string>
    <string name="add_friend">添加好友</string>

    <string name="action_emergency_call">紧急呼救</string>
    <string name="no_guardian_to_call">没有可以呼叫的监护人</string>
    <string name="stopped_emergency_call">已停止紧急呼救</string>
    <string name="call_after_n_seconds">%d秒后自动拨号</string>

    <string name="temperature_unit">温度/°C</string>
    <string name="temperature_format">%.1f°C</string>
    <string name="humidity_unit">湿度/%</string>
    <string name="humidity_format">%.1f%%</string>
    <string name="pulse_unit">脉搏/bpm</string>
    <string name="pulse_format">%dbpm</string>
    <string name="smoke">浓度/ppm</string>
    <string name="smoke_format">%dppm</string>

    <string name="action_setting_home_location">家庭位置设置</string>
    <string name="error_homeaddress_empty">请输入家庭地址描述</string>
    <string name="error_address_notfind">抱歉，未能找到结果</string>
    <string name="action_save_home_location">正在保存……</string>
    <string name="action_search">搜索</string>
    <string name="action_save">保存</string>

    <string name="no_medication_reminder">无吃药提醒事项</string>
    <string name="query_delete_reminder">确定要删除此提醒事项吗？</string>
    <string name="medicine_name">药名</string>
    <string name="medicine_usage">用法及用量</string>
    <string name="tip_medication_remind">请您注意按时吃药</string>
    <string name="action_clock_cancel">闹钟已取消</string>
    <string name="action_set_clock">设置闹钟时间为</string>

    <string name="action_post_new_moment">发布新动态</string>
    <string name="no_moment">暂无动态</string>
    <string name="reload_on_network_error">加载出错，点击重新加载</string>
    <string name="prompt_say_something">说点什么吧^_^</string>
    <string name="action_posting_moment">正在上传……</string>
    <string name="post_moment_successfully">发布动态成功</string>

    <string name="no_location_provider">无法获取位置，请检查您是否打开了位置服务</string>
    <string name="no_location_permission">本应用需要位置权限来获取您的实时位置，请您退出本应用并授予权限后再重启本应用</string>
    <string name="linechart_xlabel">\n\n时间</string>

    <string-array name="weekday_short">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>

    <string name="tip_scan_qrcode">将二维码放入框内，即可自动扫描</string>
    <string name="alert_error_open_camera">无法启动相机</string>
    <string name="action_confirm">确认</string>
    <string name="alert_login_iot">请点击确定按钮登录物联网设备终端</string>
    <string name="alert_invalid_login_iot_qrcode">登录二维码已失效</string>
    <string name="action_logout_iot">注销物联网设备终端</string>
    <string name="action_infrared_theft_proof">红外防盗</string>
    <string name="query_switch_infrared_off">确定要关闭红外防盗警报吗？</string>
    <string name="action_switch_monitor_older">切换监视老人</string>
</resources>
