<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/nav_group_feature"
        android:checkableBehavior="single">
        <item android:id="@+id/nav_monitor"
            android:icon="@drawable/ic_monitor"
            android:title="@string/action_monitor" />

        <item android:id="@+id/nav_monitor_warning"
            android:icon="@drawable/ic_warning"
            android:title="@string/action_monitor_warning"/>

        <item android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts"
            android:title="@string/action_contacts_older"/>

    </group>

    <group android:id="@+id/nav_group_other"
        android:checkableBehavior="none">
        <item android:id="@+id/nav_scan_qrcode"
            android:icon="@drawable/ic_qrcode"
            android:title="@string/action_scan_qr_code"/>

        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings"/>

        <item android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/action_exit"/>
    </group>

</menu>
