<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp">

                <ImageView
                    android:id="@+id/icon_phone_register"
                    android:layout_width="@dimen/normal_icon_size"
                    android:layout_height="@dimen/normal_icon_size"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_centerVertical="true"
                    android:tint="@color/colorPrimary"
                    android:src="@drawable/ic_phone"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/icon_phone_register"
                    android:layout_centerVertical="true">

                    <AutoCompleteTextView
                        android:id="@+id/register_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_phone_number"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp">

                <ImageView
                    android:id="@+id/icon_password_register"
                    android:layout_width="@dimen/normal_icon_size"
                    android:layout_height="@dimen/normal_icon_size"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_centerVertical="true"
                    android:tint="@color/colorPrimary"
                    android:src="@drawable/ic_key" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/icon_password_register"
                    android:layout_centerVertical="true">

                    <EditText
                        android:id="@+id/register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:maxLength="30"/>
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true">

                </android.support.design.widget.TextInputLayout>

                <EditText
                    android:id="@+id/register_reconfirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_reconfirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="30"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="51dp"
                    android:layout_marginStart="51dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/large_text_size"
                    android:textStyle="bold"
                    android:text="@string/prompt_sex"
                    android:id="@+id/register_sex"
                    android:layout_marginLeft="51dp"
                    android:layout_marginStart="51dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <RadioGroup
                    android:id="@+id/sex_group"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/register_sex"
                    android:layout_centerHorizontal="true">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/large_text_size"
                        android:textStyle="bold"
                        android:text="@string/prompt_male"
                        android:id="@+id/register_male"
                        android:layout_gravity="center_horizontal" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/large_text_size"
                        android:textStyle="bold"
                        android:text="@string/prompt_female"
                        android:id="@+id/register_female" />
                </RadioGroup>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/large_text_size"
                    android:textStyle="bold"
                    android:text="@string/prompt_name"
                    android:id="@+id/register_name_label"
                    android:layout_marginLeft="51dp"
                    android:layout_marginStart="51dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/register_name_label">

                    <EditText
                        android:id="@+id/register_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLines="1"
                        android:maxLength="30"/>

                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/large_text_size"
                    android:textStyle="bold"
                    android:text="@string/prompt_account_type"
                    android:id="@+id/register_account_type"
                    android:layout_marginLeft="51dp"
                    android:layout_marginStart="51dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <RadioGroup
                    android:id="@+id/account_group"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/register_account_type"
                    android:layout_toRightOf="@+id/register_account_type">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/large_text_size"
                        android:textStyle="bold"
                        android:text="@string/prompt_elder"
                        android:id="@+id/register_account_elder"
                        android:layout_gravity="center_horizontal" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/large_text_size"
                        android:textStyle="bold"
                        android:text="@string/prompt_guardian"
                        android:id="@+id/register_account_guardian" />
                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/large_text_size"
                    android:textStyle="bold"
                    android:text="@string/prompt_identifying_code"
                    android:id="@+id/register_identifying_label"
                    android:layout_marginLeft="51dp"
                    android:layout_marginStart="51dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/register_identifying_label">

                    <EditText
                        android:id="@+id/register_identifying_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLines="1"
                        android:maxLength="30"/>

                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_identifying_code"
                android:id="@+id/button_get_code"
                android:layout_weight="0.5"
                android:layout_gravity="end" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_register"
                android:textSize="@dimen/large_text_size"
                android:textColor="@android:color/white"
                android:paddingTop="@dimen/large_button_padding"
                android:paddingBottom="@dimen/large_button_padding"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>