<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.monitor.FamilyMonitorFragment">

    <TextView
        android:id="@+id/txt_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/ic_info_outline_48dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textSize="@dimen/large_text_size"
        android:text="@string/no_data"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/family_monitor_data_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/safe_level_area"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/safe_level_size"
                        android:orientation="horizontal"
                        android:visibility="gone"
                        android:background="@color/green_500"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_security"
                            android:tint="@android:color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/family_monitor_safe_level"
                            android:gravity="center_vertical"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/normal_text_size"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

                        <TextView
                            android:id="@+id/txt_safe_level"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"
                            android:text="@string/safe"
                            android:textSize="@dimen/xlarge_text_size"
                            />

                    </LinearLayout>
                </android.support.design.widget.AppBarLayout>

                <LinearLayout
                    android:id="@+id/temperature_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView android:id="@+id/txt_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/prompt_temperature"
                        android:textColor="@color/teal_500"
                        android:textSize="@dimen/normal_text_size"
                        android:layout_marginLeft="@dimen/item_padding"
                        />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/temperature_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/humidity_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/txt_humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_humidity"
                        android:textColor="@color/indigo_500"
                        android:textSize="@dimen/normal_text_size"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginLeft="@dimen/item_padding"
                        />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/humidity_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/smoke_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView android:id="@+id/txt_smoke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_smoke"
                        android:textColor="@color/amber_500"
                        android:textSize="@dimen/normal_text_size"
                        android:layout_marginLeft="@dimen/item_padding"
                        android:layout_marginTop="@dimen/activity_vertical_margin"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/smoke_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>
